kasadra-frontend-repo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: kasadara
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: ghcr.io/softwarestacksolutions/react-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
      imagePullSecrets:
        - name: ghcr-secret
