kasadra-frontend-repo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: kasadara
spec:
  type: LoadBalancer
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
