kasadra-frontend-repo/ingress.yaml
###########################
## Owner Akhilesh
###########################


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  namespace: kasadara
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: app.softwarestack.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-service
                port:
                  number: 80


###########################
## Owner Felix
###########################

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: react-app-ingress
#   namespace: kasadara
# spec:
#   ingressClassName: nginx   
#   rules:
#     - host: frontend.kasadara.local
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: react-app-service
#                 port:
#                   number: 80








# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: react-app-ingress
#   namespace: kasadara
#   annotations:
#     kubernetes.io/ingress.class: "gce"
# spec:
#   rules:
#     - host: softwarestack.xyz  
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: react-app-service
#                 port:
#                   number: 80
